# gyoji

./: .gitignore  ARCHITECTURE.md  BOOK.md  CMakeLists.txt  HELP-WANTED.md  INSTALL.md  LICENSE  Makefile  README.md  TODO.md  ast.hpp  gcov-report.sh  jbackend-format-identity.cpp  jbackend-format-identity.hpp  jbackend-format-pretty.cpp  jbackend-format-pretty.hpp  jbackend-format-tree.cpp  jbackend-format-tree.hpp  jbackend-llvm-operators.cpp  jbackend-llvm.cpp  jbackend-llvm.hpp  jbackend-toc.cpp  jbackend-toc.hpp  jbackend.cpp  jbackend.hpp  jlang.l  jlang.y  jsemantics.cpp  jsemantics.hpp  jstring.cpp  jsyntax-expression.cpp  jsyntax-expression.hpp  jsyntax-file-statement.cpp  jsyntax-file-statement.hpp  jsyntax-function-definition.cpp  jsyntax-function-definition.hpp  jsyntax-import.cpp  jsyntax-import.hpp  jsyntax-statement.cpp  jsyntax-statement.hpp  (+19 more)
backend/: CMakeLists.txt  Makefile  jbackend-format-identity.cpp  jbackend-format-identity.hpp  jbackend-format-pretty.cpp  jbackend-format-pretty.hpp  jbackend-format-tree.cpp  jbackend-format-tree.hpp  jbackend-toc.cpp  jbackend.cpp  jbackend.hpp
codegen/: CMakeLists.txt  Makefile  jbackend-llvm-operators.cpp  jbackend-llvm-types.cpp  jbackend-llvm-types.hpp  jbackend-llvm.cpp  jbackend-llvm.hpp  jsemantics.cpp  jsemantics.hpp  llvm-translation-unit-visitor.cpp
codegen/jlang-codegen/: jbackend-llvm-operators.hpp  jbackend-llvm.hpp  jsemantics.hpp
doc/: Doxyfile.in  MemoryFootprint.ods  header.html
docs/: Doxyfile.in
errors/: CMakeLists.txt  errors.cpp  test_errors.cpp
frontend/: CMakeLists.txt  Makefile  ast.cpp  ast.hpp  input-source-file.cpp  jlang-frontend.hpp  jlang.l  jlang.y  jsyntax.cpp  lex-context.cpp  lex-context.hpp  namespace.cpp  namespace.hpp  parse-result.cpp  parser.cpp  syntax-node.cpp  test_namespace.cpp  test_syntax.cpp  test_syntax_tree.cpp  test_syntax_tree.hpp  test_token_stream.cpp  token-stream.cpp  tree.cpp  yacc-context.cpp
frontend/jlang-frontend/: forward.hpp  frontend.hpp  jsyntax.hpp  lex-context.hpp  namespace.hpp  parse-result.hpp  parser.hpp  syntax-node.hpp  token-stream.hpp  tree.hpp  yacc-context.hpp
lib/: Makefile  pointers  pointers.g  pointers.gh  pointers.o.ll  pointers.o.mir  strcpy  strcpy.bc  strcpy.c  strcpy.g  strcpy.gh  strcpy.ll  strcpy.o.ll  strcpy.o.mir  t  tptr  tptr.cpp
make/: rules.mk
src/: CMakeLists.txt  main.cpp
src/analysis/: CMakeLists.txt  analysis-borrow-checker.cpp  analysis-return-values.cpp  analysis-type-resolution.cpp  analysis-unreachable.cpp  analysis-use-before-assignment.cpp  analysis.cpp  gyoji-analysis.hpp  jlang-analysis.hpp  test_analysis.cpp
src/backend/: CMakeLists.txt  jbackend-format-identity.cpp
src/backend/jlang-backend/: jbackend-format-pretty.hpp
src/cmdline/: CMakeLists.txt  jcc.cpp  jformat-identity-main.cpp  jformat-identity.cpp  jformat-identity.hpp  jformat-pretty.cpp  jformat-pretty.hpp  jformat-toc.cpp  jformat-toc.hpp  jformat-tree-main.cpp  jformat-tree.cpp  jformat-tree.hpp  jnamespaces-main.cpp  jtokenize.cpp
src/codegen/: CMakeLists.txt  codegen.cpp  gyoji-codegen-llvm.cpp  gyoji-codegen-private.hpp  gyoji-codegen.hpp  jbackend-llvm-operators.cpp  jbackend-llvm-types.cpp  jbackend-llvm.cpp  jlang-codegen-llvm.cpp  jlang-codegen-private.hpp  jlang-codegen.hpp  llvm-translation-unit-visitor.cpp
src/codegen/jlang-codegen/: jbackend-llvm-types.hpp  jbackend-llvm.hpp  jsemantics.hpp
src/context/: CMakeLists.txt  compiler-context.cpp  context.cpp  errors.cpp  gyoji-context.hpp  jlang-context.hpp  source-reference.cpp  test_errors.cpp  token-stream.cpp
src/context/gyoji-context/: errors.hpp  source-reference.hpp  token-stream.hpp
src/context/jlang-context/: #source-reference.hpp#  .#source-reference.hpp  errors.hpp  source-reference.hpp  token-stream.hpp
src/errors/: CMakeLists.txt  errors.cpp  test_errors.cpp
src/errors/jlang-errors/: errors.hpp
src/frontend/: CMakeLists.txt  function-lowering.cpp  function-resolver.cpp  function-scope.cpp  gpp.l  gyoji-frontend.hpp  gyoji.l  gyoji.y  input-source.cpp  jlang-frontend.hpp  jlang.l  jlang.y  lex-context.cpp  lex-context.hpp  namespace.cpp  ns2.cpp  parse-literal-int.cpp  parse-result.cpp  parser.cpp  scope-old.cpp.old  syntax-node.cpp  test_namespace.cpp  test_scope.cpp  test_syntax.cpp  test_token_stream.cpp  test_types.cpp  token-stream.cpp  tree.cpp  tree.cpp.orig  type-lowering.cpp  type-resolver.cpp
src/frontend/gyoji-frontend/: forward.hpp  function-lowering.hpp  function-resolver.hpp  function-scope.hpp  lex-context.hpp  namespace.hpp  nonterminals  ns2.hpp  parse-literal-int.hpp  parse-result.hpp  parser.hpp  syntax-node.hpp  tokens.hpp  tree.hpp  type-lowering.hpp  type-resolver.hpp
src/frontend/jlang-frontend/: forward.hpp  function-resolver.hpp  function-scope.hpp  input-source-file.hpp  input-source.hpp  lex-context.hpp  namespace.hpp  parse-literal-int.hpp  parse-result.hpp  parser.hpp  syntax-node.hpp  token-stream.hpp  tokens.hpp  tree.hpp  type-resolver.hpp
src/mir/: CMakeLists.txt  functions.cpp  gyoji-mir.hpp  jlang-mir.hpp  mir.cpp  operation.cpp  symbols.cpp  test_types.cpp  type-member.cpp  type-method.cpp  type-resolver.cpp  type.cpp  types.cpp
src/mir/gyoji-mir/: functions.hpp  operations.hpp  symbols.hpp  types.hpp
src/mir/jlang-mir/: functions.hpp  globals.hpp  operations.hpp  symbols.hpp  type-resolver.hpp  types.hpp
src/misc/: CMakeLists.txt  getopt.cpp  input-source-file.cpp  input-source.cpp  jstring.cpp  subprocess.cpp  test_getopt.cpp  test_jstring.cpp  test_subprocess.cpp  test_xml.cpp  xml.cpp
src/misc/gyoji-misc/: getopt.hpp  input-source-file.hpp  input-source.hpp  jstring.hpp  pointers.hpp  subprocess.hpp  test.hpp  xml.hpp
src/misc/jlang-misc/: input-source-file.hpp  input-source.hpp  jstring.hpp  pointers.hpp  test.hpp  xml.hpp
src/types/: CMakeLists.txt  jlang-types.hpp  test_types.cpp  types.cpp
website/: CMakeLists.txt  architecture.html  code-coverage.html  doxygen.html  examples.html  goals.html  header.html  help-wanted.html  index.html  sidebar.html  styles.css  support.html
(+63 files in other folders)
